--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,35 @@
 name: OIDC to Power BI API
 
 on:
-push:
-branches:
-- main
+  push:
+    branches: [main]
 
 jobs:
-call-powerbi-api:
-runs-on: ubuntu-latest
-permissions:
-id-token: write # Needed to request OIDC token
-contents: read
+  call-powerbi-api:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write # Required for OIDC
+      contents: read
 
-steps:
-- name: Request OIDC token and get access token
-id: get_token
-run: |
-echo "Requesting access token..."
-TOKEN=$(curl -X POST \
--H "Content-Type: application/x-www-form-urlencoded" \
--d "client_id=${{ secrets.AZURE_CLIENT_ID }}" \
--d "scope=https://analysis.windows.net/powerbi/api/.default" \
--d "grant_type=client_credentials" \
--d "client_assertion_type=urn:ietf:params:oauth:client-assertion-type:jwt-bearer" \
--d "client_assertion=$(curl -H "Authorization: Bearer ${{ steps.oidc_token.outputs.id_token }}" "https://token.actions.githubusercontent.com")" \
-"https://login.microsoftonline.com/${{ secrets.AZURE_TENANT_ID }}/oauth2/v2.0/token" | jq -r '.access_token')
-echo "::set-output name=access_token::$TOKEN"
+    steps:
+      - name: Authenticate to Azure using OIDC
+        id: az_login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-- name: Call Power BI API
-run: |
-curl -H "Authorization: Bearer ${{ steps.get_token.outputs.access_token }}" \
-https://api.powerbi.com/v1.0/myorg/datasets
+      - name: Get Access Token for Power BI
+        id: get_token
+        run: |
+          ACCESS_TOKEN=$(az account get-access-token \
+            --resource=https://analysis.windows.net/powerbi/api \
+            --query accessToken -o tsv)
+          echo "::add-mask::$ACCESS_TOKEN"
+          echo "access_token=$ACCESS_TOKEN" >> $GITHUB_OUTPUT
+
+      - name: Call Power BI API
+        run: |
+          curl -H "Authorization: Bearer ${{ steps.get_token.outputs.access_token }}" \
+            https://api.powerbi.com/v1.0/myorg/datasets
