--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,28 +8,34 @@ jobs:
   call-powerbi-api:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write # Required for OIDC
+      id-token: write
       contents: read
 
     steps:
-      - name: Authenticate to Azure using OIDC
-        id: az_login
-        uses: azure/login@v1
+      - name: Get OIDC token from GitHub
+        id: oidc
+        uses: actions/github-script@v7
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          script: |
+            const token = await core.getIDToken();
+            core.setOutput("id_token", token);
 
-      - name: Get Access Token for Power BI
-        id: get_token
+      - name: Exchange OIDC token for access token
+        id: token
         run: |
-          ACCESS_TOKEN=$(az account get-access-token \
-            --resource=https://analysis.windows.net/powerbi/api \
-            --query accessToken -o tsv)
-          echo "::add-mask::$ACCESS_TOKEN"
-          echo "access_token=$ACCESS_TOKEN" >> $GITHUB_OUTPUT
+          RESPONSE=$(curl -s -X POST \
+            -H "Content-Type: application/x-www-form-urlencoded" \
+            -d "client_id=${{ secrets.AZURE_CLIENT_ID }}" \
+            -d "grant_type=client_credentials" \
+            -d "scope=https://analysis.windows.net/powerbi/api/.default" \
+            -d "client_assertion_type=urn:ietf:params:oauth:client-assertion-type:jwt-bearer" \
+            -d "client_assertion=${{ steps.oidc.outputs.id_token }}" \
+            "https://login.microsoftonline.com/${{ secrets.AZURE_TENANT_ID }}/oauth2/v2.0/token")
+
+          echo "RESPONSE=$RESPONSE"
+          echo "access_token=$(echo $RESPONSE | jq -r '.access_token')" >> $GITHUB_OUTPUT
 
       - name: Call Power BI API
         run: |
-          curl -H "Authorization: Bearer ${{ steps.get_token.outputs.access_token }}" \
-            https://api.powerbi.com/v1.0/myorg/datasets
+          curl -H "Authorization: Bearer ${{ steps.token.outputs.access_token }}" \
+               https://api.powerbi.com/v1.0/myorg/datasets
