--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const token = await core.getIDToken("api://AzureADTokenExchange");
+            const token = await core.getIDToken();
             core.setOutput("id_token", token);
 
       - name: Debug OIDC token
